--- a/src/app/jogo-da-velha/jogo-da-velha.component.css
+++ b/src/app/jogo-da-velha/jogo-da-velha.component.css
@@ -60,6 +60,12 @@ ul li {
 	 background-color: lightgreen;
 }
 
-#fundo-cinza {
-	background-color: grey;
+.placar {
+	display: flex;
+	justify-content: center;
+	flex-direction: row;
+	align-items: center;
+	height: 50px;
+	width: 100px;
+	margin-left: 160px;
 }
