--- a/src/app/jogo-da-velha/jogo-da-velha.component.html
+++ b/src/app/jogo-da-velha/jogo-da-velha.component.html
@@ -1,6 +1,8 @@
 <div>
   <h2>Jogo da velha</h2>
-  
+  <div class="placar" *ngIf="showTabuleiro">
+    Placar:&nbsp;<p style="color: green;">{{jogoDaVelhaService.pontuacaoJogadorX}} </p> &nbsp;-&nbsp; <p style="color: red;">{{jogoDaVelhaService.pontuacaoJogadorO}}</p>
+  </div>
   <!-- tela inicial -->
   <div class="principal" *ngIf="showInicio">
   	<a href="#" 
